--- a/frontend/src/app/components/header/header.css
+++ b/frontend/src/app/components/header/header.css
@@ -170,7 +170,7 @@
     left: 5%;
     bottom: 0;
     width: 90%;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 1px solid #374151;
   }
 
   .profile-menu {
@@ -178,15 +178,25 @@
     grid-row: 1;
     align-self: center;
     justify-self: end;
-    padding: 0.5rem 1rem 0.5rem 0;
-    z-index: 1;
+    padding: 0.5rem 2rem 0.5rem 0;
+    z-index: 1035;
+  }
+
+  .profile-menu .dropdown-menu {
+    z-index: 1040;
+    min-width: 10.5rem;
+    width: 10.5rem;
+  }
+
+  .profile-menu .dropdown-item {
+    font-size: 1rem;
   }
 
   .header-search-section {
     grid-column: 1 / -1;
     grid-row: 2;
     background-color: #f5f6f8;
-    padding: 0.85rem 1rem 1rem;
+    padding: 1.7rem 2rem 1rem;
     z-index: 1;
   }
 
